<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/str_today_s_date"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_txt_start_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_day"
            android:maxLength="2"
            android:textSize="@dimen/sp_18"
            />


        <EditText
            android:id="@+id/edit_txt_start_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_month"
            android:maxLength="2"
            android:textSize="@dimen/sp_18"
            />

        <EditText
            android:id="@+id/edit_txt_start_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_year"
            android:maxLength="4"
            android:textSize="@dimen/sp_18"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/str_date_of_birth"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_txt_end_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_day"
            android:maxLength="2"
            android:textSize="@dimen/sp_18"
            />


        <EditText
            android:id="@+id/edit_txt_end_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_month"
            android:maxLength="2"
            android:textSize="@dimen/sp_18"
            />

        <EditText
            android:id="@+id/edit_txt_end_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/str_year"
            android:maxLength="4"
            android:textSize="@dimen/sp_18"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bnt_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/str_calculate"
            />

        <Button
            android:id="@+id/bnt_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/str_clear"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/ic_border_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:text="@string/str_your_age"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:textSize="@dimen/sp_18"
            />

    </LinearLayout>

</LinearLayout>